# phone-farm

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  ROADMAP.md  install.sh  phone-farm.toml  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  showcase.md
.github/workflows/: ci.yml  publish.yml
docs/: MARKETING.md
phone_farm/: __init__.py  __main__.py  appium_server.py  automation.py  cli.py  config.py  crypto.py  db.py  demo.py  doctor.py  emu_cli.py  emulator.py  log.py  mcp_server.py  orchestrator.py  pool.py  report_renderer.py  reporter.py  scoring.py
phone_farm/qa_agent/: __init__.py  accessibility.py  agent.py  ai_backend.py  bug_report.py  crash_reporter.py  logcat.py  login_detect.py  memory.py  session.py  state.py
phone_farm/web/: __init__.py  api.py  app.py  qa_runner.py  state.py
scripts/actions/: __init__.py  input_text.py  scroll.py  tap.py  wait.py
scripts/config/: flow_config.toml
scripts/flows/: __init__.py  base_flow.py  daily_usage_flow.py  deep_test_flow.py
tests/: conftest.py  test_actions.py  test_appium_retry.py  test_appium_server.py  test_audit_cli.py  test_automation.py  test_cli.py  test_config.py  test_config_defaults.py  test_crypto.py  test_db.py  test_doctor.py  test_emulator.py  test_emulator_retry.py  test_flows.py  test_log.py  test_orchestrator.py  test_pool.py  test_report_renderer.py  test_reporter.py  test_scoring.py  test_state_persistence.py
tests/qa_agent/: test_accessibility_free.py  test_login_detect.py
tests/test_qa_agent/: test_accessibility.py  test_agent.py  test_ai_backend.py  (+6 more)
(+14 files in other folders)
